--- a/client/src/components/views/NavBar/Sections/Navbar.css
+++ b/client/src/components/views/NavBar/Sections/Navbar.css
@@ -41,10 +41,13 @@
 .menu__container .menu_left {
   float: left;
   width:50%;
+  padding: 9px 10px;
 }
 
 .menu__container .menu_rigth {
   float: right;
+  width: 30%;
+  padding: 9px 10px;
   
 }
 
