change right menu
change right menu

--- a/client/src/components/views/NavBar/Sections/Navbar.css
+++ b/client/src/components/views/NavBar/Sections/Navbar.css
@@ -5,7 +5,7 @@
 .menu {
   padding: 0 20px;
   border-bottom: solid 1px #e8e8e8;
-  overflow: auto;
+  overflow: visible;
   box-shadow: 0 0 30px #f3f1f1;
   background-color: white;
 }
@@ -46,9 +46,8 @@
 
 .menu__container .menu_rigth {
   float: right;
-  width: 30%;
+  width: 40%;
   padding: 9px 10px;
-  
 }
 
 .menu__mobile-button {
